--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,95 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - BadammiSite</title>
+    <script type="importmap"></script>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/BadammiSite.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/animate.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/bootstrap-select.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/subscribe-better.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/owl.carousel.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/font-awesome.min.css" asp-append-version="true" />
+</head>
+
+<section class="main-slide">
+    <div id="naturix-slider" class="owl-carousel nav-1">
+        <div class="item">
+            <img alt=".." src="~/Resource/IMG/feature.png">
+            <div class="tbl-wrp slide-1">
+                <div class="text-middle">
+                    <div class="tbl-cell">
+                        <div class="slide-caption container text-center">
+                            <div class="slide-title">
+                                <img src="assets/img/icons/slide-txt-1.png" alt="">
+                            </div>
+                            <div class="slide-title2 pb-50">
+                                <h2 class="section-title"> <span class="light-font">Live </span> <strong>organic </strong> <span class="light-font">for live </span> <strong>healthy </strong> </h2>
+                                <h4 class="sub-title"> ORGANIC FRUITS, VEGETABLES, AND LOT MORE TO YOUR DOOR </h4>
+                            </div>
+                            <div class="slide">
+                                <a href="#" class="slide-btn"> Shop Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<section class="organic-farm sec-space-top light-bg">
+
+    <img alt="" src="~/Resource/IMG/sec-img-1.png" class="left-bg-img" />
+    <img alt="" src="~/Resource/IMG/sec-img-2.png" class="center-bg-img" />
+
+    <div class="container rel-div">
+        <div class="title-wrap">
+            <h2 class="section-title"> <span class="light-font">we are </span> <strong>organic farmfood <img src="assets/img/icons/logo-icon.png" alt="" /> </strong> </h2>
+            <h4 class="sub-title"> <span> ABOUT NATURIX FARMFOOD </span> </h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-sm-6 text-center">
+                <div class="feature-wrap">
+                    <img src="~/Resource/IMG/feature-1.png" alt="" />
+                    <h3 class="title-1 ptb-15"> <span class="light-font">fresh from </span> <strong> naturix farm</strong> </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center">
+                <div class="feature-wrap">
+                    <img src="~/Resource/IMG/feature-2.png" alt="" />
+                    <h3 class="title-1 ptb-15"> <span class="light-font"> 100%</span> <strong> organic goods</strong> </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center">
+                <div class="feature-wrap">
+                    <img src="~/Resource/IMG/feature-3.png" alt="" />
+                    <h3 class="title-1 ptb-15"> <span class="light-font">premium </span> <strong> quality</strong> </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center">
+                <div class="feature-wrap">
+                    <img src="~/Resource/IMG/feature-4.png" alt="" />
+                    <h3 class="title-1 ptb-15"> <span class="light-font">100% </span> <strong>natural</strong> </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.  </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="rel-div feature-img">
+            <img src="~/Resource/IMG/feature.png" alt="" />
+        </div>
+    </div>
+</section>
+
