Add Shop Edit Service

--- a/Pages/Fruits/AddFruitsView.cshtml
+++ b/Pages/Fruits/AddFruitsView.cshtml
@@ -12,6 +12,11 @@
     </div>
 
     <div>
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+    </div>
+
+    <div>
         <label asp-for="Composition"></label>
         <textarea asp-for="Composition" class="form-control"></textarea>
     </div>
