--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -18,12 +18,22 @@
     <link rel="stylesheet" href="~/css/subscribe-better.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/owl.carousel.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/font-awesome.min.css" asp-append-version="true" />
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="~/js/plugin/bootstrap.min.js"></script>
+    <script src="~/js/plugin/bootstrap-select.min.js"></script>
+    <script src="~/js/plugin/owl.carousel.min.js"></script>
+    <script src="~/js/plugin/jquery.plugin.min.js"></script>
+    <script src="~/js/plugin/jquery.countdown.js"></script>
+    <script src="~/js/plugin/jquery.subscribe-better.min.js"></script>
+    <script src="~/js/theme.js"></script>
 </head>
 
+<body>
 <section class="main-slide">
     <div id="naturix-slider" class="owl-carousel nav-1">
         <div class="item">
-            <img alt=".." src="~/Resource/IMG/feature.png">
+                <img alt=".." src="~/Resource/IMG/background.jpg" class="slide-img">
             <div class="tbl-wrp slide-1">
                 <div class="text-middle">
                     <div class="tbl-cell">
@@ -95,4 +105,5 @@
         </div>
     </div>
 </section>
+</body>
 
