--- a/Pages/Fruits/UpdateFruitView.cshtml
+++ b/Pages/Fruits/UpdateFruitView.cshtml
@@ -19,6 +19,10 @@
         <td>
             <input id="fruitName" value="@Model.Name" class="form-control" />
         </td>
+        <th>Price</th>
+        <td>
+            <input id="fruitPrice" value="@Model.Price" class="form-control" />
+        </td>
     </tr>
     <tr>
         <th>Photo</th>
@@ -58,6 +62,7 @@
             const benefits = document.getElementById("fruitBenefits").value;
             const photoFile = document.getElementById("newPhoto").files[0]; 
             const photopath = "@Model.PhotoPath";
+            const price = document.getElementById("fruitPrice").value;
 
             const formData = new FormData();
             formData.append("Id", id);
@@ -65,6 +70,7 @@
             formData.append("Composition", composition);
             formData.append("BenefitsString", benefits);
             formData.append("PhotoPath",photopath);
+            formData.append("Price",price);
             if (photoFile) {
                 formData.append("newPhoto", photoFile);
             }
