--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,6 +2,11 @@ html {
   font-size: 14px;
 }
 
+shopimg{
+    width:300px;
+    height:300px;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -173,6 +178,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-backface-visibility: visible !important;
     overflow-x: hidden;
+}
+
+section{
+    height:100%;
+}
+
+div{
+    margin: 0;
 }
 
 .wrapper {
